# 3d-space--sim

./: CMakeLists.txt  LICENSE  PATCH_NOTES.md  README.md
apps/stellar_game/: ActionWheel.cpp  ActionWheel.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CVarWindow.cpp  CVarWindow.h  CinematicCameraWindow.cpp  CinematicCameraWindow.h  CommandPalette.cpp  CommandPalette.h  ConsoleWindow.cpp  ConsoleWindow.h  ControlsConfig.h  ControlsWindow.cpp  ControlsWindow.h  FlightRecorderWindow.cpp  FlightRecorderWindow.h  LogWindow.cpp  LogWindow.h  LogbookWindow.cpp  LogbookWindow.h  MarketDashboardWindow.cpp  MarketDashboardWindow.h  OrbitAnalyzerWindow.cpp  OrbitAnalyzerWindow.h  PhotoModeWindow.cpp  PhotoModeWindow.h  PorkchopPlot.cpp  PorkchopPlot.h  ProfilerWindow.cpp  ProfilerWindow.h  Screenshot.cpp  Screenshot.h  SystemConditionsWindow.cpp  SystemConditionsWindow.h  TradePlannerWindow.cpp  TradePlannerWindow.h  TrafficLanesWindow.cpp  TrafficLanesWindow.h  (+1 more)
apps/stellar_sandbox/: CMakeLists.txt  main.cpp
include/stellar/core/: Args.h  Assert.h  CVar.h  ChromeTrace.h  Clamp.h  Hash.h  JobSystem.h  Log.h  Profiler.h  Random.h  StableHash.h  Types.h
include/stellar/econ/: Commodity.h  Economy.h  Market.h  RoutePlanner.h
include/stellar/math/: Mat4.h  Math.h  Quat.h  Vec2.h  Vec3.h
include/stellar/proc/: GalaxyGenerator.h  NameGenerator.h  Noise.h  SystemGenerator.h
include/stellar/render/: AtmosphereRenderer.h  AutoExposure.h  Camera.h  FrameGraph.h  Gl.h  GpuParticleField.h  GpuSurfaceCache.h  LineRenderer.h  Mesh.h  MeshRenderer.h  Nebula.h  ParticleSystem.h  PointRenderer.h  PostFX.h  ProceduralArtifact.h  ProceduralAsteroid.h  ProceduralCompositor.h  ProceduralLivery.h  ProceduralPlanet.h  ProceduralPostFX.h  ProceduralRings.h  ProceduralSky.h  ProceduralSprite.h  RenderTarget.h  SdfMesher.h  Shader.h  Starfield.h  Texture.h  TextureReadback.h
include/stellar/sim/: Atmosphere.h  Ballistics.h  CargoJettisonPlanner.h  Celestial.h  Combat.h  Contraband.h  Countermeasures.h  Derelict.h  Distress.h  Docking.h  DockingClearanceService.h  DockingComputer.h  EncounterDirector.h  Extortion.h  Faction.h  FactionProfile.h  FlightController.h  FuelScoopSystem.h  Gravity.h  Industry.h  IndustryScanner.h  IndustryService.h  Insurance.h  Interdiction.h  LambertPlanner.h  LambertSolver.h  Law.h  Logbook.h  ManeuverComputer.h  ManeuverProgramComputer.h  Market.h  MarketAnalysis.h  Mining.h  MissileDefense.h  Mission.h  MissionAssist.h  MissionLogic.h  NavAssistComputer.h  NavRoute.h  NpcCombatAI.h  (+33 more)
include/stellar/ui/: AudioSettings.h  Bookmarks.h  FuzzySearch.h  HudLayout.h  HudSettings.h  ImGuiCompat.h  Livery.h  LogBuffer.h  ProceduralUi.h  UiLayoutProfiles.h  UiSettings.h  UiWorkspaces.h  VfxSettings.h  WindowRegistry.h
src/core/: Assert.cpp  CVar.cpp  ChromeTrace.cpp  Hash.cpp  Log.cpp  Profiler.cpp
src/econ/: Commodity.cpp  Economy.cpp  Market.cpp  RoutePlanner.cpp
src/proc/: GalaxyGenerator.cpp  NameGenerator.cpp  Noise.cpp  SystemGenerator.cpp
src/render/: AtmosphereRenderer.cpp  AutoExposure.cpp  Camera.cpp  FrameGraph.cpp  Gl.cpp  GpuParticleField.cpp  GpuSurfaceCache.cpp  LineRenderer.cpp  Mesh.cpp  MeshRenderer.cpp  Nebula.cpp  ParticleSystem.cpp  PointRenderer.cpp  PostFX.cpp  ProceduralArtifact.cpp  ProceduralAsteroid.cpp  ProceduralCompositor.cpp  ProceduralLivery.cpp  ProceduralPlanet.cpp  ProceduralPostFX.cpp  ProceduralRings.cpp  ProceduralSky.cpp  ProceduralSprite.cpp  RenderTarget.cpp  SdfMesher.cpp  Shader.cpp  Starfield.cpp  Texture.cpp  TextureReadback.cpp
src/sim/: Atmosphere.cpp  Ballistics.cpp  CargoJettisonPlanner.cpp  Combat.cpp  Countermeasures.cpp  Derelict.cpp  Distress.cpp  Docking.cpp  DockingClearanceService.cpp  DockingComputer.cpp  EncounterDirector.cpp  Extortion.cpp  Faction.cpp  FactionProfile.cpp  FlightController.cpp  FuelScoopSystem.cpp  Gravity.cpp  Industry.cpp  IndustryScanner.cpp  IndustryService.cpp  Insurance.cpp  Interdiction.cpp  LambertPlanner.cpp  LambertSolver.cpp  Law.cpp  Logbook.cpp  ManeuverComputer.cpp  ManeuverProgramComputer.cpp  Market.cpp  MarketAnalysis.cpp  Mining.cpp  MissileDefense.cpp  MissionAssist.cpp  MissionLogic.cpp  NavAssistComputer.cpp  NavRoute.cpp  NpcCombatAI.cpp  Orbit.cpp  OrbitalMechanics.cpp  PoliceScan.cpp  (+25 more)
src/ui/: AudioSettings.cpp  Bookmarks.cpp  FuzzySearch.cpp  HudLayout.cpp  HudSettings.cpp  Livery.cpp  LogBuffer.cpp  ProceduralUi.cpp  UiLayoutProfiles.cpp  UiSettings.cpp  UiWorkspaces.cpp  VfxSettings.cpp  WindowRegistry.cpp
tests/: CMakeLists.txt  main.cpp  test_args.cpp  test_atmosphere.cpp  test_auto_exposure.cpp  test_ballistics.cpp  test_bookmarks.cpp  test_cargo_jettison_planner.cpp  test_combat.cpp  test_cvars.cpp  test_derelict.cpp  test_distress.cpp  test_docking.cpp  test_docking_clearance.cpp  test_economy.cpp  test_encounter_director.cpp  test_extortion.cpp  test_faction_profile.cpp  test_flight_controller.cpp  test_frame_graph.cpp  test_fuel_scoop.cpp  test_fuzzy_search.cpp  test_gravity.cpp  test_harness.h  test_hud_settings.cpp  test_industry.cpp  test_industry_scanner.cpp  test_industry_service.cpp  test_insurance.cpp  test_intercept_course.cpp  test_interdiction.cpp  test_jobs.cpp  test_k_routes.cpp  test_lambert_planner.cpp  test_lambert_planner_stepper.cpp  test_lambert_solver.cpp  test_lambert_solver_multirev.cpp  test_law.cpp  test_log_buffer.cpp  test_log_sinks.cpp  (+60 more)
